--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI="mongodb+srv://omselkar2606:omselkar2606@cluster0.om2pnlp.mongodb.net/jobboard?retryWrites=true&w=majority"
-CLERK_WEBHOOK_SECRET= ""
+CLERK_WEBHOOK_SECRET= "whsec_42OBKtKvraDWOmdoRRPzEdYqQav9G/Q2"
