Implement user authentication and job management features

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,14 @@
-MONGODB_URI="mongodb+srv://omselkar2606:omselkar2606@cluster0.om2pnlp.mongodb.net/jobboard?retryWrites=true&w=majority"
+JWT_SECRET = "dev#secret"
+
+# MongoDB Setup
+MONGODB_URI="mongodb+srv://omselkar2606:omselkar2606@cluster0.gnhnuwp.mongodb.net"
+
+# Cloudinary Setup
+CLOUDINARY_NAME = "dlpgz8cbi"
+CLOUDINARY_API_KEY ="652794654711465"
+CLOUDINARY_SECRET_KEY = "phy-_Ewprr3MDwdm0KLijCnGNbQ"
+
+# Clerk Setup
+CLERK_PUBLISHABLE_KEY=pk_test_bm90YWJsZS1jb3JhbC04NS5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_kpSbBNDxvU6RCzeAnnE70neOyoDm6L7jCW1lnH8Ynx
 CLERK_WEBHOOK_SECRET= "whsec_42OBKtKvraDWOmdoRRPzEdYqQav9G/Q2"
