--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/express": "^1.6.0",
     "@sentry/node": "^9.27.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
