--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,5 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_bm90YWJsZS1jb3JhbC04NS5jbGVyay5hY2NvdW50cy5kZXYk
+# VITE_CLERK_PUBLISHABLE_KEY=pk_test_bm90YWJsZS1jb3JhbC04NS5jbGVyay5hY2NvdW50cy5kZXYk
 VITE_BACKEND_URL=http://localhost:5000
+
+VITE_EMAILJS_SERVICE_ID="service_ygxiqjk"
+VITE_EMAILJS_PUBLIC_KEY="VIHnUNFHSgZGZ23OS"
