--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.9",
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.9.0",
     "fuse.js": "^7.1.0",
     "k-convert": "^1.0.6",
