--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-JWT_SECRET = "dev#secret"
+JWT_SECRET=ksf8sA7sd78sGhs82GHsdfjJKsdjk29sdf9
 
 # MongoDB Setup
 MONGODB_URI="mongodb+srv://omselkar2606:omselkar2606@cluster0.gnhnuwp.mongodb.net"
@@ -8,7 +8,5 @@ CLOUDINARY_NAME = "dlpgz8cbi"
 CLOUDINARY_API_KEY ="652794654711465"
 CLOUDINARY_SECRET_KEY = "phy-_Ewprr3MDwdm0KLijCnGNbQ"
 
-# Clerk Setup
-CLERK_PUBLISHABLE_KEY=pk_test_bm90YWJsZS1jb3JhbC04NS5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_kpSbBNDxvU6RCzeAnnE70neOyoDm6L7jCW1lnH8Ynx
-CLERK_WEBHOOK_SECRET= "whsec_42OBKtKvraDWOmdoRRPzEdYqQav9G/Q2"
+EMAILJS_SERVICE_ID="service_ygxiqjk"
+EMAILJS_PUBLIC_KEY="VIHnUNFHSgZGZ23OS"
